--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <link
       rel="icon"
       type="image/png"
-      href="/favicon/favicon-96x96.png"
+      href="./favicon/favicon-96x96.png"
       sizes="96x96"
     />
-    <link rel="icon" type="image/svg+xml" href="/favicon/logo.svg" />
-    <link rel="shortcut icon" href="/favicon/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="./favicon/logo.svg" />
+    <link rel="shortcut icon" href="./favicon/favicon.ico" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/favicon/apple-touch-icon.png"
+      href="./favicon/apple-touch-icon.png"
     />
     <meta name="apple-mobile-web-app-title" content="QR Generator" />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="manifest" href="./site.webmanifest" />
     <title>QR Code Generator – text, links, Wi-Fi, phone numbers</title>
     <meta
       name="description"
