--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="./favicon/favicon-96x96.png"
       sizes="96x96"
     />
-    <link rel="icon" type="image/svg+xml" href="./favicon/logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="ю/favicon/logo.svg" />
     <link rel="shortcut icon" href="./favicon/favicon.ico" />
     <link
       rel="apple-touch-icon"
@@ -28,6 +28,20 @@
       name="keywords"
       content="QR-код, генератор QR, створити QR, QR для тексту, QR для посилання, QR для Wi-Fi, QR для телефону, QR code, QR generator, create QR, QR for text, QR for link, QR for Wi-Fi, QR for phone"
     />
+
+    <!-- Open Graph -->
+<meta property="og:title" content="QR Code Generator" />
+<meta property="og:description"  content="Створюйте QR-коди швидко та легко: для тексту, посилань, Wi-Fi мереж і номерів телефону. Generate QR codes easily for text, links, Wi-Fi, and phone numbers." />
+<meta property="og:image" content="./favicon/web-app-manifest-512x512.png" />
+
+<meta property="og:type" content="website" />
+
+<!-- Twitter (X) -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="QR Code Generator" />
+<meta name="twitter:description"  content="Створюйте QR-коди швидко та легко: для тексту, посилань, Wi-Fi мереж і номерів телефону. Generate QR codes easily for text, links, Wi-Fi, and phone numbers." />
+<meta name="twitter:image" content="./favicon/web-app-manifest-512x512.png" />
+
     <script src="https://cdn.jsdelivr.net/npm/qr-code-styling@1.6.0/lib/qr-code-styling.js"></script>
     <style>
       * {
@@ -862,4 +876,3 @@
     </script>
   </body>
 </html>
-
