--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
 <meta name="twitter:image" content="./favicon/web-app-manifest-512x512.png" />
 
     <script src="https://cdn.jsdelivr.net/npm/qr-code-styling@1.6.0/lib/qr-code-styling.js"></script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KNMKSH52BQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KNMKSH52BQ');
+</script>
     <style>
       * {
         box-sizing: border-box;
